# Lab1_TLong

./: CMakeLists.txt  main.cpp  type.h
actionsOnLongNumber/: checkFunctions.cpp  checkFunctions.h  helperActions.cpp  helperActions.h  mathFunctions.cpp  mathFunctions.h
const/: const.cpp  const.h
dialog/: massages.cpp  massages.h  readWrite.cpp  readWrite.h
inOutFiles/: inFiles.txt
